
Yeah, this is the fourth Freevial release that sees the light. Amongst the
different improvements, perhaps the most interesting one is the introduction
of database format version 1.1, which introduces many new features.

Important Improvements:
 - Added support for media questions (that is, with sound or images).
 - Added support for questions with more than one correct and two incorrect
   answers (three of them are randomly choosen at runtime).
 - When a location is indicated with --database, the default categories are
   still loaded in addition to the indicated ones.
 - There is now support for categories in different languages.

Other Improvements:
 - Freevial does now work with Python version 2.4, in addition to 2.5.
 - Decreased the time it takes for the wheel to switch to a question when
   the game is muted.
 - Added an option (--preload) to load everything at startup.
 - Added an option (--max-fps) to change the FPS limit.
 - All .xml files are now validated using a XSD schema when they are loaded.
 - Forced line breaks in XML files are now represented by "<br/>" (LP: 179621).
 - All error messages are now written to stderr.

Bug Fixes:
 - Fixed the --database option; it did not work previously.
 - Fixed file permissions so that the installation script works for end users.
 - Fixed a bug in the wheel which could cause it to return to the team
   selection screen instead of showing a question.
 - User requested end of the game ("e" key) works correctly now (LP: #184420).


Version 1.2 - Perfectionism
------------------------------

This is the third release of Freevial, which mainly only features some
important bugfixes and little improvements. Below we will highlight the
most important changes.

Improvements:
 - Further reduced CPU usage, saving some more cycles now.
 - If only a name (and not a path) is passed as --skin, and there's no
   directory with that name in the working directory, Freevial will now